apps/order-mgt/base/transportation-deployconfig.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-02-26 - 02:22:44 +0000
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-transport-simulator.git
    app.quarkus.io/commit-id: dec56d1454612b1ba505d1d96324f29d7dc7016c
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-transport-simulator.git
  labels:
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0.0
    app: vaccinetransport
    app.openshift.io/runtime: quarkus
  name: vaccine-transport-simulator
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-transport-simulator.git
  labels:
    app: vaccinetransport
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0.0
  name: vaccine-transport-simulator
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-transport-simulator.git
      labels:
        app: vaccinetransport
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: vaccine-transport-simulator
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -jar
        - /deployments/quarkus-run.jar
        - -cp
        - /deployments/lib/io.quarkus.quarkus-security-runtime-spi-1.12.0.Final.jar:/deployments/lib/io.quarkus.quarkus-vertx-http-dev-console-runtime-spi-1.12.0.Final.jar:/deployments/lib/org.reactivestreams.reactive-streams-1.0.3.jar:/deployments/lib/io.smallrye.reactive.mutiny-0.13.0.jar:/deployments/lib/io.quarkus.security.quarkus-security-1.1.3.Final.jar:/deployments/lib/io.netty.netty-codec-4.1.49.Final.jar:/deployments/lib/io.quarkus.quarkus-netty-1.12.0.Final.jar:/deployments/lib/io.nett [...]
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: ibmcase/vaccine-transport-simulator:1.0.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: vaccine-transport-simulator
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: kafka-cert
          readOnly: false
          subPath: ""
      serviceAccount: vaccine-runtime
      volumes:
      - name: kafka-cert
        secret:
          optional: false
          secretName: kafka-cluster-ca-cert
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-transport-simulator.git
  labels:
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0.0
    app: vaccinetransport
    app.openshift.io/runtime: quarkus
  name: vaccine-transport-simulator
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: vaccine-transport-simulator
