apps/order-mgt/base/voro-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaccine-order-optimizer
  namespace: vaccine-solution
  labels:
    name: vaccine-order-optimizer
    app: vaccine-order-optimizer
spec:
  ports:
    - name: web
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: vaccine-order-optimizer
  type: ClusterIP
  sessionAffinity: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vaccine-order-optimizer
  namespace: vaccine-solution
  labels:
    app: vaccine-order-optimizer
spec:
  path: /
  to:
    kind: Service
    name: vaccine-order-optimizer
    weight: 100
  port:
    targetPort: 5000
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaccine-order-optimizer
  namespace: vaccine-solution
  labels:
    app: vaccine-order-optimizer
spec:
  selector:
    matchLabels:
      app: vaccine-order-optimizer
  replicas: 1
  template:
    metadata:
      labels:
        app: vaccine-order-optimizer
    spec:
      containers:
      - name: vaccine-order-optimizer
        image: ibmcase/vaccine-order-optimizer:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
        expose: true
        volumeMounts:
            - name: kafka-cert
              mountPath: /app/certs
        livenessProbe:
          failureThreshold: 12
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 2
        monitoring:
          labels:
            k8s-app: vaccine-order-optimizer
        pullPolicy: Always
        service:
          annotations:
            prometheus.io/scrape: "true"
          port: 8080
          type: NodePort
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
      volumes:
      - name: kafka-cert
        secret:
          secretName: vaccine-kafka-cluster-ca-cert
